--- a/tailwind-prod.css
+++ b/tailwind-prod.css
@@ -22,6 +22,7 @@
 html {
   line-height: 1.5;
   -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
   text-size-adjust: 100%;
   -moz-tab-size: 4;
   tab-size: 4;
